kubernetes/apps/home/home-assistant/app/httproute.yaml

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: home-assistant
  annotations:
    external-dns.kubernetes.io/exclude-unifi: "true"
spec:
  hostnames:
    - home.${SECRET_DOMAIN}
  parentRefs:
    - name: envoy-external
      namespace: networking
  rules:
    - backendRefs:
        - group: gateway.envoyproxy.io
          kind: Backend
          name: home-assistant
      matches:
        - path:
            type: PathPrefix
            value: /
